--- a/src/main/resources/templates/enrollments/form.html
+++ b/src/main/resources/templates/enrollments/form.html
@@ -14,16 +14,16 @@
     <label for="observation">Observation:</label>
     <input type="text" th:field="*{observation}" id="observation" name="observation"><br><br>
 
-<!--    <label for="semester">Semester:</label>-->
-<!--    <select th:field="*{semester}" id="semester" name="semester">-->
-<!--        <option value="">Select a semester</option>-->
-<!--        <option th:each="semester : ${semestersItems}" th:value="${semester.id}" th:label="${semester.description}"></option>-->
-<!--    </select><br><br>-->
-
     <label for="student">Student:</label>
     <select th:field="*{student}" id="student" name="student">
         <option value="">Select a student</option>
         <option th:each="student : ${studentsItems}" th:value="${student.id}" th:label="${student.name}"></option>
+    </select><br><br>
+
+    <label for="semester">Semester:</label>
+    <select th:field="*{semester}" id="semester" name="semester">
+        <option value="">Select a semester</option>
+        <option th:each="semester : ${semestersItems}" th:value="${semester.id}" th:label="${semester.description}"></option>
     </select><br><br>
 
     <button type="submit">Save</button>
