change list title

--- a/src/main/resources/templates/students/list.html
+++ b/src/main/resources/templates/students/list.html
@@ -37,7 +37,7 @@
                     <th>Nome</th>
                     <th>Matrícula</th>
                     <th>Instituição</th>
-                    <th>Período</th>
+                    <th>Declaração ativa</th>
                     <th colspan="2"></th>
                 </tr>
                 </thead>
