fix allowing to change student's enrollment status

--- a/src/main/resources/templates/students/form.html
+++ b/src/main/resources/templates/students/form.html
@@ -38,6 +38,13 @@
                     <option th:each="institution : ${institutionsItems}" th:value="${institution.id}" th:label="${institution.name}"></option>
                 </select>
             </div>
+            <div class="col-md-4">
+                <label class="col-sm-2 col-form-label">Declaração</label>
+                <select class="form-select" required aria-label="Default select example" th:field="*{currentEnrollmentStatus}" id="currentEnrollmentStatus" name="currentEnrollmentStatus">
+                    <option selected value="">Selecione...</option>
+                    <option th:each="enrollment : *{enrollmentStatus}" th:value="${enrollment.id}" th:label="${enrollment.semester.description}"></option>
+                </select>
+            </div>
         </div>
         <div class="row mt-4">
             <div class="d-flex justify-content-end">
