fix typos and change home statement

--- a/src/main/resources/templates/layout/home.html
+++ b/src/main/resources/templates/layout/home.html
@@ -10,9 +10,9 @@
                 <div class="col-md-6">
                     <h1>Bem-vindo ao Athena</h1>
                     <div class="mt-3">
-                        <p>Somos um sistema revolucionário de geração de declarações de estudantes! Este sistema automatizado é a solução perfeita para instituições que desejam economizar tempo e recursos na criação de declarações precisas e profissionais para seus alunos.</p>
-                        <p>Com a nossa plataforma intuitiva, as instituições podem facilmente gerar declarações personalizadas para cada aluno, com todas as informações importantes incluídas, como nome completo, período letivo e data de expiração da declaração. O sistema também permite a personalização de modelos de declarações para atender às necessidades específicas de cada instituição.</p>
-                        <p>Não perca mais tempo criando declarações manualmente. Experimente agora nosso sistema automatizado de geração de declarações de estudantes e veja como ele pode revolucionar a maneira como sua instituição lida com essas tarefas administrativas.</p>
+                        <p>Somos um sistema revolucionário de gerenciamento de declarações de estudantes! Este sistema automatizado é a solução perfeita para empresas que desejam economizar tempo e recursos no gerenciamento de declarações de dependentes dos seus colaboradores.</p>
+                        <p>Com a nossa plataforma intuitiva, será possível cadastrar declarações para cada aluno, com todas as informações importantes incluídas, como nome completo, período letivo e data de expiração da declaração. O sistema também permite a personalização de modelos de declarações para atender às necessidades específicas de cada instituição.</p>
+                        <p>Não perca mais tempo gerenciando declarações no papel. Experimente agora nosso sistema automatizado de gerenciamento de declarações de estudantes e veja como ele pode revolucionar a maneira como sua empresa lida com essas tarefas administrativas.</p>
                     </div>
                 </div>
                 <div class="col-md-6 d-flex justify-content-center">
